drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_bio_op_shift.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_bio_op_shift.c:4:13: error: ‘BIO_OP_SHIFT’ undeclared here (not in a function); did you mean ‘SI_LOAD_SHIFT’?
 int dummy = BIO_OP_SHIFT;
             ^~~~~~~~~~~~
             SI_LOAD_SHIFT
